c4prj1_deck/grade.txt
Grading at Tue Sep 29 23:22:40 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:41:13: error: implicit declaration of function ‘deck_contins’ [-Werror=implicit-function-declaration]
       if (! deck_contins(excluded_cards, c))
             ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
